<resources>
    <string name="app_name">clm_iot2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_products">Produits</string>
    <string name="menu_cart">Panier</string>
    <string name="menu_orders">Mes Commandes</string>
    <string name="menu_profile">Mon Profil</string>
    <string name="menu_tracking">Tracking</string>

    <string name="description_image_produit">Description</string>
</resources>