<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_products"
                android:icon="@drawable/ic_menu_products"
                android:title="@string/menu_products"/>
        <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_menu_cart"
                android:title="@string/menu_cart"/>
        <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_menu_orders"
                android:title="@string/menu_orders"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile"
                android:title="@string/menu_profile"/>
        <item
                android:id="@+id/nav_tracking"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_tracking"/>
    </group>
</menu>