<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_products">

    <fragment
            android:id="@+id/nav_products"
            android:name="com.example.clm_iot2.ui.products.ProductsFragment"
            android:label="@string/menu_products"
            tools:layout="@layout/fragment_products">

            <action
                android:id="@+id/action_productsFragment_to_singleProductFragment"
                app:destination="@id/singleProductFragment" />

    </fragment>

    <fragment
            android:id="@+id/singleProductFragment"
            android:name="com.example.clm_iot2.ui.singleproduct.SingleProductFragment"
            android:label="SingleProductFragment" />


    <fragment
            android:id="@+id/nav_cart"
            android:name="com.example.clm_iot2.ui.cart.CartFragment"
            android:label="@string/menu_cart"
            tools:layout="@layout/fragment_cart"/>

    <fragment
            android:id="@+id/nav_orders"
            android:name="com.example.clm_iot2.ui.orders.OrdersFragment"
            android:label="@string/menu_orders"
            tools:layout="@layout/fragment_orders"/>

    <fragment
            android:id="@+id/nav_profile"
            android:name="com.example.clm_iot2.ui.orders.OrdersFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_orders"/>

    <fragment
            android:id="@+id/nav_tracking"
            android:name="com.example.clm_iot2.ui.orders.OrdersFragment"
            android:label="@string/menu_tracking"
            tools:layout="@layout/fragment_orders"/>

</navigation>